@@ -1,0 +1,5 @@
+Source: pkg
+
+Package: pkg
+Architecture: all
+Description: okay
