@@ -1,0 +1,7 @@
+# comment
+bin
+sbin
+usr/sbin
+usr/bin
+usr/share/doc/pkg
+usr/lib/pkg
